--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -48,7 +48,7 @@
             <Image url="@../../../images/firstLevel/objects/well.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="164.0" fitWidth="80.0" layoutX="49.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="storageView" fitHeight="164.0" fitWidth="80.0" layoutX="49.0" layoutY="290.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/firstLevel/objects/shop.jpg" />
          </image>
