--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -71,7 +71,7 @@
             <Image url="@../../../images/secondLevel/lian.png" />
          </image>
       </ImageView>
-      <Button fx:id="buttonTasks1" layoutX="1168.0" layoutY="22.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+      <Button fx:id="buttonTasks1" layoutX="1168.0" layoutY="22.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
