--- a/src/main/resources/org/example/some/shopThirdLevel.fxml
+++ b/src/main/resources/org/example/some/shopThirdLevel.fxml
@@ -6,21 +6,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ShopThirdLevel">
+<AnchorPane fx:id="anchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1255.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ShopThirdLevel">
    <children>
       <ImageView fitHeight="793.0" fitWidth="1442.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
    </children>
-   <ImageView fitHeight="815.0" fitWidth="1476.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fitHeight="707.0" fitWidth="1255.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@../../../images/shop/magical/magicalOpened.png" />
       </image>
    </ImageView>
-    <ImageView fx:id="closeButtonView" fitHeight="49.0" fitWidth="52.0" layoutX="1354.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="closeButtonView" fitHeight="49.0" fitWidth="52.0" layoutX="1160.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../../../images/shop/close.png" />
         </image>
     </ImageView>
-    <Button fx:id="closeButton" layoutX="1353.0" layoutY="39.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="50.0" prefWidth="50.0" styleClass="close" stylesheets="@../../../styles/shop.css" />
+    <Button fx:id="closeButton" layoutX="1160.0" layoutY="40.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="50.0" prefWidth="50.0" styleClass="close" stylesheets="@../../../styles/shop.css" />
 
     <ImageView id="coins" fx:id="coinsView" fitHeight="43.0" fitWidth="164.0" layoutX="37.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
         <image>
@@ -37,9 +37,9 @@
         </cursor>
     </ImageView>
     <Button fx:id="backButton" layoutX="45.0" layoutY="400.0" mnemonicParsing="false" onAction="#secondShop" prefHeight="65.0" prefWidth="66.0" rotate="180.0" styleClass="backButton" stylesheets="@../../../styles/shop.css" />
-   <Button layoutX="269.0" layoutY="324.0" mnemonicParsing="false" onAction="#buyMino" prefHeight="31.0" prefWidth="193.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 2100 монет" />
-   <Button layoutX="673.0" layoutY="324.0" mnemonicParsing="false" onAction="#buyFairy" prefHeight="31.0" prefWidth="193.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 3000 монет" />
-   <Button layoutX="1028.0" layoutY="320.0" mnemonicParsing="false" onAction="#buyDwarf" prefHeight="31.0" prefWidth="193.0" rotate="8.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 2567 монет" />
-   <Button layoutX="443.0" layoutY="691.0" mnemonicParsing="false" onAction="#buyMushroom" prefHeight="31.0" prefWidth="193.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1300 монет" />
-   <Button layoutX="891.0" layoutY="690.0" mnemonicParsing="false" onAction="#buyUnicorn" prefHeight="31.0" prefWidth="193.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 3200 монет" />
+   <Button layoutX="239.0" layoutY="276.0" mnemonicParsing="false" onAction="#buyMino" prefHeight="31.0" prefWidth="177.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 2100 монет" />
+   <Button layoutX="580.0" layoutY="276.0" mnemonicParsing="false" onAction="#buyFairy" prefHeight="31.0" prefWidth="183.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 3000 монет" />
+   <Button layoutX="892.0" layoutY="276.0" mnemonicParsing="false" onAction="#buyDwarf" prefHeight="31.0" prefWidth="174.0" rotate="8.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 2567 монет" />
+   <Button layoutX="377.0" layoutY="598.0" mnemonicParsing="false" onAction="#buyMushroom" prefHeight="31.0" prefWidth="193.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1300 монет" />
+   <Button layoutX="775.0" layoutY="599.0" mnemonicParsing="false" onAction="#buyUnicorn" prefHeight="20.0" prefWidth="164.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 3200 монет" />
 </AnchorPane>
