--- a/src/main/resources/styles/info.css
+++ b/src/main/resources/styles/info.css
@@ -16,4 +16,8 @@
 #beginButton:hover {
     -fx-background-color: #DF6A3D;
 }
+.buttonLevel {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
 
