--- a/src/main/resources/org/example/some/chooseSecondLevel.fxml
+++ b/src/main/resources/org/example/some/chooseSecondLevel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,6 +18,14 @@
             <Image url="@../../../images/secondLevel/icons/settings2.png" />
          </image>
       </ImageView>
-      <Button id="beginButton" layoutX="551.0" layoutY="601.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="52.0" prefWidth="205.0" stylesheets="@../../../styles/info.css" text="Продовжити" />
+      <Button layoutX="468.0" layoutY="167.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="359.0" prefWidth="330.0" styleClass="buttonLevel" stylesheets="@../../../styles/info.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="478.0" layoutY="177.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="359.0" prefWidth="330.0" styleClass="buttonLevel" stylesheets="@../../../styles/info.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
