--- a/src/main/resources/org/example/some/chooseThirdLevel.fxml
+++ b/src/main/resources/org/example/some/chooseThirdLevel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,12 +12,18 @@
          <image>
             <Image url="@../../../images/passedLevel/openThird.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <ImageView fitHeight="86.0" fitWidth="132.0" layoutX="26.0" layoutY="592.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/mainMenu.png" />
          </image>
       </ImageView>
-      <Button id="beginButton" layoutX="579.0" layoutY="601.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="50.0" prefWidth="200.0" stylesheets="@../../../styles/info.css" text="Продовжити" />
+      <Button layoutX="833.0" layoutY="170.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="362.0" prefWidth="329.0" styleClass="buttonLevel" stylesheets="@../../../styles/info.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
