--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,6 +33,46 @@
 
 
       <Button layoutX="66.0" layoutY="527.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="84.0" prefWidth="177.0" text="2 level" />
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1103.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/firstLevel/icons/instr.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1178.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/thirdLevel/icons/settingThird.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1178.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/thirdLevel/icons/Tasks.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1179.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/thirdLevel/icons/Extra.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="buttonInfo" layoutX="1103.0" layoutY="32.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="42.0" prefWidth="43.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="buttonTasks" layoutX="1178.0" layoutY="95.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="buttonExtraTasks" layoutX="1179.0" layoutY="161.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="buttonTasks1" layoutX="1178.0" layoutY="32.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
 
 
    </children>
