--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -75,6 +76,17 @@
             <Image url="@../../../images/secondLevel/palm.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="storage2View" fitHeight="96.0" fitWidth="162.0" layoutX="866.0" layoutY="558.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/objects/basket.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="feeder2View" fitHeight="175.0" fitWidth="159.0" layoutX="114.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/objects/feeder2.png" />
+         </image>
+      </ImageView>
+      <ProgressBar fx:id="foodBar" layoutX="7.0" layoutY="540.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
 
    </children>
 </AnchorPane>
