--- a/src/main/resources/org/example/some/chooseSecondLevel.fxml
+++ b/src/main/resources/org/example/some/chooseSecondLevel.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ChooseSecondLevel">
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ChooseSecondLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,5 +27,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <Button layoutX="47.0" layoutY="601.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="51.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
