--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -68,6 +68,7 @@
             <Image url="@../../../images/firstLevel/icons/shop.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="well2View" fitHeight="311.0" fitWidth="276.0" layoutX="907.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true" />
       <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
       <Button layoutX="1135.0" layoutY="507.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="51.0" prefWidth="98.0" text="1 level" />
       <Button layoutX="1121.0" layoutY="442.0" mnemonicParsing="false" onAction="#nextLevel" prefHeight="51.0" prefWidth="118.0" text="3 level" />
@@ -87,6 +88,7 @@
          </image>
       </ImageView>
       <ProgressBar fx:id="foodBar" layoutX="7.0" layoutY="540.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar fx:id="waterBar" layoutX="1108.0" layoutY="328.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
 
    </children>
 </AnchorPane>
