--- a/src/main/resources/org/example/some/menu.fxml
+++ b/src/main/resources/org/example/some/menu.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane  fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.MenuController">
+<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.MenuController">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/backGrounds/start.png" />
          </image>
       </ImageView>
-      <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Button" textFill="WHITE" />
+      <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Start" textFill="WHITE" />
    </children>
 </AnchorPane>
