made button "Home" inactive and added  serialization to sold animals in SecondLevel

--- a/src/main/resources/org/example/some/chooseSecondLevel.fxml
+++ b/src/main/resources/org/example/some/chooseSecondLevel.fxml
@@ -27,6 +27,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="47.0" layoutY="601.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="51.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button layoutX="47.0" layoutY="601.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="51.0" prefWidth="51.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
