--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -15,11 +15,11 @@
          </image>
       </ImageView>
 
-      <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="1154.0" layoutY="649.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="54.0" layoutY="27.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/mainMenu.png" />
+            <Image url="@../../../images/homeUnactive.png" />
          </image></ImageView>
-      <Button id="homeButton" fx:id="homeButton" layoutX="1154.0" layoutY="648.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
+      <Button id="homeButton" fx:id="homeButton" layoutX="54.0" layoutY="26.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
       <ImageView id="coinsImage" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/coins.png" />
@@ -70,25 +70,25 @@
             <Image url="@../../../images/secondLevel/palm.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="storage2View" fitHeight="96.0" fitWidth="162.0" layoutX="866.0" layoutY="558.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="storage2View" fitHeight="96.0" fitWidth="162.0" layoutX="866.0" layoutY="552.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/secondLevel/objects/basket.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="feeder2View" fitHeight="175.0" fitWidth="159.0" layoutX="114.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="feeder2View" fitHeight="175.0" fitWidth="159.0" layoutX="114.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/secondLevel/objects/feeder2.png" />
          </image>
       </ImageView>
-      <ProgressBar fx:id="foodBar" layoutX="7.0" layoutY="540.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar fx:id="foodBar" layoutX="7.0" layoutY="534.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
       <ProgressBar fx:id="waterBar" layoutX="1108.0" layoutY="328.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
 
-      <ImageView fitHeight="60.0" fitWidth="162.0" layoutX="1055.0" layoutY="582.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="60.0" fitWidth="162.0" layoutX="1064.0" layoutY="640.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/firstLevel/icons/shop.png" />
          </image>
       </ImageView>
-      <Button fx:id="shopButton" layoutX="1055.0" layoutY="582.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="shopButton" layoutX="1064.0" layoutY="640.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
 
    </children>
 </AnchorPane>
