--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,7 +10,7 @@
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ThirdLevel">
    <children>
 
-      <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="wellView" fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/backGrounds/magicBack.png" />
          </image>
@@ -32,7 +33,7 @@
       <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
 
 
-      <Button layoutX="66.0" layoutY="527.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="84.0" prefWidth="177.0" text="2 level" />
+      <Button layoutX="48.0" layoutY="249.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="84.0" prefWidth="177.0" text="2 level" />
       <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1103.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/firstLevel/icons/instr.png" />
@@ -73,6 +74,12 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <ImageView fx:id="wellView" fitHeight="64.0" fitWidth="247.0" layoutX="48.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/thirdLevel/otherObjects/fountain.png" />
+         </image>
+      </ImageView>
+      <ProgressBar fx:id="wellBar" layoutX="-55.0" layoutY="556.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
 
 
    </children>
