--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
@@ -9,90 +8,85 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ThirdLevel">
-   <children>
-
-      <ImageView fx:id="feederView" fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
-         <image>
+<children>
+    <ImageView fx:id="background" fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
+        <image>
             <Image url="@../../../images/backGrounds/magicBack.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="33.0" layoutY="25.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/mainMenu.png" />
-         </image></ImageView>
-      <Button id="homeButton" fx:id="homeButton" layoutX="33.0" layoutY="24.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ImageView id="coinsImage" fx:id="coinsView" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
-         <image>
+        </image>
+    </ImageView>
+    <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="54.0" layoutY="27.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/homeUnactive.png" />
+        </image>
+    </ImageView>
+    <ImageView id="coinsImage" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+        <image>
             <Image url="@../../../images/coins.png" />
-         </image>
-      </ImageView>
-      <ImageView id="coinsImage" fitHeight="60.0" fitWidth="162.0" layoutX="367.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-         <image>
+        </image>
+    </ImageView>
+    <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1093.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/secondLevel/icons/instr2.png" />
+        </image>
+    </ImageView>
+    <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/secondLevel/icons/settings2.png" />
+        </image>
+    </ImageView>
+    <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/secondLevel/icons/tasks2.png" />
+        </image>
+    </ImageView>
+    <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1169.0" layoutY="151.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/secondLevel/icons/extra2.png" />
+        </image>
+    </ImageView>
+
+    <Button fx:id="buttonInfo" layoutX="1093.0" layoutY="22.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="42.0" prefWidth="43.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor></Button>
+    <Button fx:id="buttonTasks" layoutX="1168.0" layoutY="85.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor></Button>
+    <Button fx:id="buttonExtraTasks" layoutX="1169.0" layoutY="151.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor></Button>
+    <Button fx:id="settings" layoutX="1168.0" layoutY="22.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor></Button>
+    <ImageView fx:id="well2View" fitHeight="311.0" fitWidth="276.0" layoutX="907.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true" />
+    <Button layoutX="135.0" layoutY="304.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="74.0" prefWidth="178.0" text="2 level" />
+    <ImageView fx:id="wellView" fitHeight="71.0" fitWidth="296.0" layoutX="112.0" layoutY="605.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/thirdLevel/otherObjects/fountain.png" />
+        </image>
+    </ImageView>
+    <ImageView fx:id="feederView" fitHeight="121.0" fitWidth="121.0" layoutX="115.0" layoutY="422.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/thirdLevel/otherObjects/boiler.png" />
+        </image>
+    </ImageView>
+    <ProgressBar fx:id="foodBar" layoutX="1.0" layoutY="459.0" prefHeight="17.0" prefWidth="140.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
+
+    <ImageView fitHeight="60.0" fitWidth="162.0" layoutX="1026.0" layoutY="632.0" pickOnBounds="true" preserveRatio="true">
+        <image>
             <Image url="@../../../images/firstLevel/icons/shop.png" />
-         </image>
-      </ImageView>
-      <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
-
-
-      <Button layoutX="48.0" layoutY="249.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="84.0" prefWidth="177.0" text="2 level" />
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1103.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/firstLevel/icons/instr.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1178.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/thirdLevel/icons/settingThird.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1178.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/thirdLevel/icons/Tasks.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1179.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/thirdLevel/icons/Extra.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="buttonInfo" layoutX="1103.0" layoutY="32.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="42.0" prefWidth="43.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button fx:id="buttonTasks" layoutX="1178.0" layoutY="95.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button fx:id="buttonExtraTasks" layoutX="1179.0" layoutY="161.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button fx:id="buttonTasks1" layoutX="1178.0" layoutY="32.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="42.0" prefWidth="42.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <ImageView fx:id="storageView" fitHeight="189.0" fitWidth="178.0" layoutX="1059.0" layoutY="485.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+        </image>
+    </ImageView>
+    <Button fx:id="shopButton" layoutX="1026.0" layoutY="632.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ImageView fx:id="storageView" fitHeight="165.0" fitWidth="154.0" layoutX="968.0" layoutY="438.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/thirdLevel/otherObjects/coffer.png" />
          </image>
       </ImageView>
-      <ProgressBar fx:id="wellBar" layoutX="64.0" layoutY="664.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ProgressBar fx:id="foodBar" layoutX="-24.0" layoutY="484.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ImageView fx:id="wellView" fitHeight="64.0" fitWidth="247.0" layoutX="38.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/thirdLevel/otherObjects/fountain.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="feederView" fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/thirdLevel/otherObjects/boiler.png" />
-         </image>
-      </ImageView>
 
+</children>
 
-   </children>
 </AnchorPane>
