--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -61,31 +61,31 @@
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor></Button>
-    <ImageView fx:id="well2View" fitHeight="311.0" fitWidth="276.0" layoutX="907.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true" />
     <Button layoutX="135.0" layoutY="304.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="74.0" prefWidth="178.0" text="2 level" />
-    <ImageView fx:id="wellView" fitHeight="71.0" fitWidth="296.0" layoutX="112.0" layoutY="605.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="wellView" fitHeight="71.0" fitWidth="296.0" layoutX="41.0" layoutY="585.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../../../images/thirdLevel/otherObjects/fountain.png" />
         </image>
     </ImageView>
-    <ImageView fx:id="feederView" fitHeight="121.0" fitWidth="121.0" layoutX="115.0" layoutY="422.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="feederView" fitHeight="121.0" fitWidth="121.0" layoutX="95.0" layoutY="417.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../../../images/thirdLevel/otherObjects/boiler.png" />
         </image>
     </ImageView>
     <ProgressBar fx:id="foodBar" layoutX="1.0" layoutY="459.0" prefHeight="17.0" prefWidth="140.0" progress="1.0" rotate="-90.0" stylesheets="@../../../styles/firstLevel.css" />
-
-    <ImageView fitHeight="60.0" fitWidth="162.0" layoutX="1026.0" layoutY="632.0" pickOnBounds="true" preserveRatio="true">
-        <image>
-            <Image url="@../../../images/firstLevel/icons/shop.png" />
-        </image>
-    </ImageView>
-    <Button fx:id="shopButton" layoutX="1026.0" layoutY="632.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ImageView fx:id="storageView" fitHeight="165.0" fitWidth="154.0" layoutX="968.0" layoutY="438.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="storageView" fitHeight="189.0" fitWidth="178.0" layoutX="1048.0" layoutY="417.0" onMouseClicked="#addStorageMenu" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/thirdLevel/otherObjects/coffer.png" />
          </image>
       </ImageView>
+      <ProgressBar fx:id="wellBar" layoutX="104.0" layoutY="665.0" prefHeight="17.0" prefWidth="170.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
+
+    <ImageView fitHeight="60.0" fitWidth="162.0" layoutX="1065.0" layoutY="644.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/firstLevel/icons/shop.png" />
+        </image>
+    </ImageView>
+    <Button fx:id="shopButton" layoutX="1065.0" layoutY="643.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
 
 </children>
 
